tests/parser/pass/nested_conditional_statement.c
int main(){
    if(bla2(x,b)) {

        if(sizeof(char)<=b*3) {

            if (array[10])
            {
                if (bla.dgs)
                {
                   
                }else{
                    if (*exp)
                    {
                       int b;
                       return a==n;
                       return b;
                       //int c;
                    }
                    return b;
                    
                }
                return b;
                
            }
            return b;
            
        }
        return b;
    }else{
        return b;

        if((char)aab){

        } 
        return b;
    } 
    return b;
}