tests/parser/error/bad_form.c
void main(){
    int x;
    int y;
    if (x[sdf]){

    }
}{((((()))}
}